# goalkeepers-app

./: .gitignore  .py  README.md  main.py  pyproject.toml  requirements.txt
api/: offer_routes.py
app/: dependencies.py  main.py
app/core/: config.py  database.py  security.py
app/db/: auth_db.py  user_db.py
app/dependencies/: auth_dependencies.py
app/models/: goalkeeper.py  match.py  offer.py  player.py  rating.py  user_model.py  venue.py
app/repositories/: goalkeeper_repository.py  match_repository.py  offer_repository.py  player_repository.py  rating_repository.py  user_repository.py  venue_repository.py
app/routers/: auth_router.py  goalkeeper_router.py  match_router.py  offer_router.py  player_router.py  rating_router.py  user_router.py  venue_router.py
app/schemas/: auth_schema.py  goalkeeper_schema.py  match_schema.py  offer_schema.py  player_schema.py  rating.py  user_schema.py  venue_schema.py
app/services/: auth_service.py  goalkeeper_service.py  match_service.py  offer_service.py  player_service.py  rating_service.py  user_service.py  venue_service.py
core/: database.py
models/: offer_model.py
repositories/: offer_repository.py
schemas/: offer_schema.py
services/: offer_service.py
