[project]
name = "goalkeepers-app"
version = "1.0.0"
description = "Plataforma marketplace para la contratación de arqueros en partidos de fútbol amateur."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "tzdata>=2026.1",
]
